--- a/index.html
+++ b/index.html
@@ -22,24 +22,37 @@
         text-align: center;
         animation: fadeIn 2s ease-in-out forwards;
         opacity: 0;
+        padding: 30px 35px;
+        background: rgba(0, 0, 0, 0.25);
+        border-radius: 16px;
+        box-shadow: 0 8px 25px rgba(0, 0, 0, 0.25);
+        max-width: 420px;
+        width: 90%;
     }
 
-    h1 {
-        font-size: 4rem;
+    h1, h2 {
         letter-spacing: 3px;
         margin: 0 0 20px;
         animation: slideDown 1.5s ease;
     }
 
+    h1 {
+        font-size: 3rem;
+    }
+
+    h2 {
+        font-size: 2.4rem;
+    }
+
     p {
-        font-size: 1.5rem;
-        opacity: 0.85;
-        margin-bottom: 30px;
+        font-size: 1.2rem;
+        opacity: 0.9;
+        margin-bottom: 20px;
     }
 
     .btn {
-        padding: 15px 35px;
-        font-size: 1.2rem;
+        padding: 12px 30px;
+        font-size: 1rem;
         border: none;
         border-radius: 30px;
         background: white;
@@ -47,10 +60,12 @@
         cursor: pointer;
         font-weight: bold;
         transition: 0.3s;
+        width: 100%;
+        margin-top: 5px;
     }
 
     .btn:hover {
-        transform: scale(1.1);
+        transform: scale(1.05);
         background: #f0f0f0;
     }
 
@@ -84,6 +99,52 @@
         from { transform: translateY(0); }
         to { transform: translateY(-120vh); }
     }
+
+    /* Login form styles */
+    .form-group {
+        text-align: left;
+        margin-bottom: 15px;
+    }
+
+    label {
+        display: block;
+        font-size: 0.9rem;
+        margin-bottom: 5px;
+        opacity: 0.9;
+    }
+
+    input[type="text"],
+    input[type="password"] {
+        width: 100%;
+        padding: 10px 12px;
+        border-radius: 8px;
+        border: none;
+        font-size: 0.95rem;
+        box-sizing: border-box;
+    }
+
+    .error {
+        color: #ffb3b3;
+        font-size: 0.9rem;
+        margin-bottom: 10px;
+        min-height: 18px;
+    }
+
+    .info {
+        font-size: 0.85rem;
+        opacity: 0.85;
+        margin-top: 12px;
+    }
+
+    .logout-btn {
+        background: #ffc107;
+        color: #283e51;
+        margin-top: 20px;
+    }
+
+    .welcome-highlight {
+        font-weight: 700;
+    }
 </style>
 </head>
 
@@ -92,11 +153,92 @@
     <div></div><div></div><div></div>
 </div>
 
-<div class="container">
+<!-- LOGIN CONTAINER -->
+<div class="container" id="login-container">
     <h1>Welcome</h1>
-    <p>We're glad you're here. Enjoy the experience!</p>
-    <button class="btn">Get Started</button>
+    <p>Please log in to continue.</p>
+
+    <div id="error-message" class="error"></div>
+
+    <form id="login-form">
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input
+                type="text"
+                id="username"
+                name="username"
+                placeholder="Enter username"
+                required
+            />
+        </div>
+
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input
+                type="password"
+                id="password"
+                name="password"
+                placeholder="Enter password"
+                required
+            />
+        </div>
+
+        <button type="submit" class="btn">Login</button>
+    </form>
+
+    <p class="info">
+        Demo credentials:<br>
+        <strong>Username:</strong> demo &nbsp; | &nbsp;
+        <strong>Password:</strong> password123
+    </p>
 </div>
+
+<!-- WELCOME CONTAINER -->
+<div class="container" id="welcome-container" style="display: none;">
+    <h2>Welcome</h2>
+    <p>Hi, <span class="welcome-highlight" id="welcome-username"></span> 👋</p>
+    <p>We're glad you're here. Enjoy the experience!</p>
+    <button type="button" class="btn logout-btn" id="logout-btn">Logout</button>
+</div>
+
+<script>
+    // Demo credentials
+    const DEMO_USERNAME = "demo";
+    const DEMO_PASSWORD = "password123";
+
+    const loginContainer = document.getElementById("login-container");
+    const welcomeContainer = document.getElementById("welcome-container");
+    const loginForm = document.getElementById("login-form");
+    const errorMessage = document.getElementById("error-message");
+    const welcomeUsername = document.getElementById("welcome-username");
+    const logoutBtn = document.getElementById("logout-btn");
+
+    loginForm.addEventListener("submit", function (e) {
+        e.preventDefault();
+
+        const username = document.getElementById("username").value.trim();
+        const password = document.getElementById("password").value.trim();
+
+        if (username === DEMO_USERNAME && password === DEMO_PASSWORD) {
+            // Successful login
+            errorMessage.textContent = "";
+            loginContainer.style.display = "none";
+            welcomeContainer.style.display = "block";
+            welcomeUsername.textContent = username;
+        } else {
+            // Invalid credentials
+            errorMessage.textContent = "Invalid username or password. Please try again.";
+        }
+    });
+
+    logoutBtn.addEventListener("click", function () {
+        // Reset form and go back to login screen
+        loginForm.reset();
+        errorMessage.textContent = "";
+        welcomeContainer.style.display = "none";
+        loginContainer.style.display = "block";
+    });
+</script>
 
 </body>
 </html>
